--- a/services/hotel-service/src/main/resources/application.yml
+++ b/services/hotel-service/src/main/resources/application.yml
@@ -18,11 +18,14 @@ spring:
   application:
     name: HOTEL-SERVICE
 
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-    fetch-registry: true
-    register-with-eureka: true
-  instance:
-    prefer-ip-address: true
+  config:
+    import: optional:configserver:http://localhost:8085
+
+#eureka:
+#  client:
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
+#    fetch-registry: true
+#    register-with-eureka: true
+#  instance:
+#    prefer-ip-address: true
