--- a/services/rating-service/src/main/resources/application.yml
+++ b/services/rating-service/src/main/resources/application.yml
@@ -19,12 +19,13 @@ spring:
       ddl-auto: update
   application:
     name: RATING-SERVICE
-
-eureka:
-  client:
-    register-with-eureka: true
-    service-url:
-      defaultZone: http://localhost:8761/eureka
-    fetch-registry: true
-  instance:
-    prefer-ip-address: true
+  config:
+    import: optional:configserver:http://localhost:8085
+#eureka:
+#  client:
+#    register-with-eureka: true
+#    service-url:
+#      defaultZone: http://localhost:8761/eureka
+#    fetch-registry: true
+#  instance:
+#    prefer-ip-address: true
