Adding fault Tolerance

--- a/services/user-service/src/main/resources/application.yml
+++ b/services/user-service/src/main/resources/application.yml
@@ -22,6 +22,8 @@ spring:
 
 
 
+
+
 #eureka:
 #  instance:
 #    prefer-ip-address: true
@@ -30,3 +32,38 @@ spring:
 #    register-with-eureka: true
 #    service-url:
 #      defaultZone: http://localhost:8761/eureka
+
+management:
+  health:
+    circuitbreakers:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: health
+    enabled-by-default: true
+  endpoint:
+    info:
+      enabled: true
+    health:
+      show-details: always
+
+
+resilience4j:
+  circuitbreaker:
+    configs:
+      defualt:
+        registerHealthIndicator: true
+    instances:
+      RATING_HOTEL_BREAKER:
+        register-health-indicator: true
+        event-consumer-buffer-size: 10
+        failure-rate-threshold: 50
+        minimum-number-of-calls: 5
+        automatic-transition-from-open-to-half-open-enabled: true
+        wait-duration-in-open-state:
+          seconds: 6
+        permitted-number-of-calls-in-half-open-state: 3
+        sliding-window-size: 10
+        sliding-window-type: count_based
+
