--- a/services/api-gateway-serivce/pom.xml
+++ b/services/api-gateway-serivce/pom.xml
@@ -73,6 +73,10 @@
 			<version>3.0.7</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId> <!-- This includes RestTemplateBuilder -->
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
